--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -1,17 +1,21 @@
 <!doctype html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Electron</title>
-    <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
-    <meta
-      http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:"
-    />
-  </head>
+<html lang="zh">
 
-  <body>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" id="viewport"
+        content="width=device-width, initial-scale=0.86, maximum-scale=5, user-scalable=0">
+    <meta name="theme-color" content="#606E7A">
+    <title>Stapxs Tool Box</title>
+    <link rel="stylesheet" href="/bcui/css/style.css">
+    <link rel="stylesheet" href="/bcui/css/color-light.css">
+    <link rel="stylesheet" href="/css/append-light.css">
+</head>
+
+<body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
-  </body>
+    <script src="/bcui/js/main.js"></script>
+</body>
+
 </html>
